--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "car-race",
+  "name": "proyecto",
   "version": "1.0.0",
   "main": "index.html",
   "scripts": {
+    "start-dev": "server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
