--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "eslint": "^8.7.0",
+    "eslint-plugin-promise": "^6.0.0",
     "express": "^4.17.1",
     "socket.io": "^4.2.0"
   }
