--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "eslint": "^8.7.0",
     "eslint-plugin-promise": "^6.0.0",
     "express": "^4.17.1",
-    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "socket.io": "^4.2.0"
   },
   "devDependencies": {
